# gamecredits

./: COPYING  INSTALL  Makefile.am  README.md  bdb48.sh  configure.ac  gamecredits-qt.pro  gamerscoin-qt.pro  index.html  libbitcoinconsensus.pc.in  params.json
build-aux/m4/: bitcoin_find_bdb48.m4  bitcoin_qt.m4
contrib/: README.md  bitmarkd.bash-completion  gamecredits-qt.pro  gamecreditsd.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README  deps-linux.yml  deps-win.yml  deps-win32.yml  gitian-linux.yml  gitian-osx-bitmark.yml  gitian-win.yml  gitian-win32.yml  gitian.yml  qt-win.yml  qt-win32.yml
contrib/linearize/: example-linearize.cfg  linearize.py
contrib/macdeploy/: DS_Store  README.md  fancy.plist  macdeployqtplus
contrib/pyminer/: README.md  example-config.cfg  pyminer.py
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  makeseeds.py
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py  gen_base58_test_vectors.py
contrib/wallettools/: walletchangepass.py  walletunlock.py
debian/: README.Debian  README.source  changelog  control  copyright  gamecredits.cron.d.ex  gamecredits.default.ex  gamecredits.doc-base.EX  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
doc/: Doxyfile  README.md  README_windows.txt  Tor.txt  assets-attribution.md  bootstrap.md  build-msw.md  build-osx.md  build-unix.md  coding.md  multiwallet-qt.md  readme-qt.rst  release-notes.md  release-process.md  tor.md  translation_process.md  unit-tests.md
easywinbuilder/: 3a_build_boost.bat  3c_build_miniupnpc.bat  4a_build_daemon.bat  4b_build_qt.bat  6_gather_dlls.bat  README.md  __all_easywinbuilder.bat  build_dep.sh  download.sh  hash_daemon.sh  hash_qt.sh  patch_files.sh  set_vars.bat  unpack.sh
qa/pull-tester/: build-tests.sh.in  pull-tester.py  pull-tester.sh  run-bitmarkd-for-test.sh.in  run-gamecreditsd-for-test.sh.in
qa/rpc-tests/: README.md  conflictedbalance.sh  listtransactions.py  skeleton.py  txnmall.sh  util.py  util.sh  wallet.sh  walletbackup.sh
share/: genbuild.sh  setup.nsi  setup.nsi.in  ui.rc
share/certs/: BitcoinFoundation_Apple_Cert.pem  BitcoinFoundation_Comodo_Cert.pem  PrivateKeyNotes.md
share/pixmaps/: bitmark128.xpm  bitmark16.xpm  bitmark256.xpm  bitmark32.xpm  bitmark64.xpm  gamecredits128.xpm  gamecredits16.xpm  gamecredits256.xpm  gamecredits32.xpm  gamecredits64.xpm
share/qt/: Info.plist  Info.plist.in  clean_mac_info_plist.py  extract_strings_qt.py  make_icons.sh
src/: Makefile.am  Makefile.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.cpp  addrman.h  alert.h  allocators.cpp  allocators.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  bignum.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  bitcoinrpc.cpp  bitcoinrpc.h  bitmark-cli.cpp  bitmarkd-res.rc  bitmarkd.cpp  bloom.cpp  bloom.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  (+73 more)
src/compat/: glibc_compat.cpp
src/consensus/: params.h
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/m4/: bitcoin_qt.m4  bitmark_qt.m4  gamecredits_find_bdb48.m4  gamecredits_qt.m4  gamecredits_subdir_to_include.m4
src/policy/: fees.cpp
src/qt/: Makefile  Makefile.am  aboutdialog.cpp  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoin.cpp  bitcoin.qrc  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  bitmark.cpp  bitmarkaddressvalidator.cpp  bitmarkaddressvalidator.h  bitmarkamountfield.cpp  bitmarkamountfield.h  bitmarkgui.cpp  bitmarkgui.h  bitmarkstrings.cpp  bitmarkunits.cpp  bitmarkunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  (+86 more)
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_ach.ts  bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cmn.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gl.ts  bitcoin_gu_IN.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk_KZ.ts  (+89 more)
src/qt/res/: bitcoin-qt-res.rc  bitcoin-qt.rc  bitmark-qt-res.rc
src/qt/res/icons/: bitmark.icns
src/qt/res/text/: gamecredits.qss
src/qt/test/: Makefile.am  paymentrequestdata.h  paymentservertests.cpp  test_main.cpp  uritests.cpp
src/script/: script.h  standard.cpp
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile.am  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  canonical_tests.cpp  compress_tests.cpp  getarg_tests.cpp  hash_tests.cpp  hmac_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  (+13 more)
(+13 files in other folders)
